--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 @font-face {
   font-family: 'Nord';
-  src: url('/fonts/Nord-Medium.ttf') format('truetype');
+  src: url('../assets/fonts/Nord-Medium.ttf') format('truetype');
 
 }
 /* body, html {
@@ -31,7 +31,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('/bg.jpg');
+    background-image: url('../assets/bg.jpg');
     background-size: cover; /* Make the background cover the entire area */
     background-position: center; /* Center the background image */
     filter: blur(5px); /* Adjust the blur value as needed */
